# ece437-22fa

./: .gitignore  xem7310_v1.xdc
Final/: Final.xpr
HDL/: cmv300_cmos.v  cmv300_lvds.v  deserializer.v  drv8833.v  ref_clk.v
HDL/i2c/: i2c_frame.v  i2c_master.v
HDL/spi/: spi_frame.v  spi_master.v
Lab1/: Lab1.xpr  intro.v
Lab1A/: Lab1A.xpr
Lab1B/: Lab1B.xpr
Lab2/: Lab2.xpr
Lab2/Python/: lab2_example_python.py  ok.py
Lab2E1/: Lab2E1.xpr
Lab2E1/Python/: host.py
Lab2E2/: Lab2E2.xpr
Lab3/: Lab3.xpr  lab3_TestBench_behav.wcfg
Lab3C2/: Lab3C2.xpr  testbench_behav.wcfg
Lab3C2/Python/: host.py
Lab4/: PowerSupplyControl.py
Lab4C1/: checkpoint1.py
Lab4C2/: checkpoint2.py
Lab5/: Lab5.xpr
Lab5C2/: I2C_Temperature.v  I2C_Temperature_tb_behav.wcfg  I2C_Transmit.v  Lab5C2.xpr
Lab5C2_rewrite/: Lab5C2.xpr  i2c_master_tb_behav.wcfg
Lab5C2_rewrite/Python/ece437/: pyproject.toml  setup.py
Lab5C2_rewrite/Python/ece437/UNKNOWN.egg-info/: SOURCES.txt
Lab5C2_rewrite/Python/ece437/src/ece437/: __init__.py  i2c.py  ok.py  presets.py
Lab5C2_rewrite/Python/ece437/src/ece437.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Lab5C2_rewrite/Python/ece437/src/ece437/sensor/: __init__.py  lsm303.py
Lab7/: Lab7.xpr  drv8833_tb_behav.wcfg
Lab8/: Lab8.xpr  spi_master_tb_behav.wcfg
Lab9/: Lab9.xpr  spi_master_tb_behav.wcfg
Python/: CMV300 grab frame.ipynb  CMV300 grab video.ipynb  Configure CMV300.ipynb  Control motor with sensor readings.ipynb  FuncAnimation Demo.ipynb  Read IMU.ipynb  Read Temperature.ipynb  conda-dev.yml  run_final.py  run_final_cv2.py
(+701 files in other folders)
